# datum

./: .CMakeLists.txt.old.swp  .CMakeLists.txt.swp  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.old  build.bat  build.sh  build_vc.bat
build-linux/: RecogSVM  SVMTrain  datum  digits_svm.yml  imgui.ini  licPlateRec  svm_test.txt
licPlaterec/: CMakeLists.txt  licPlaterec.vcxproj
licPlaterec/x64/Debug/: licPlaterec.vcxprojResolveAssemblyReference.cache
licPlaterec/x64/Debug/licPlaterec.tlog/: CL.command.1.tlog  CL.read.1.tlog  licPlaterec.lastbuildstate
modules/: FindPoppler.cmake  Toolchain-cross-mingw64-linux.cmake
python/: sp_crop.py
src/: Application.cpp  Application.h  CMakeLists.txt  RecogSVM.cpp  SVMTrain.cpp  build.bat  config.h.in  feature.h  test_digits.cpp  train_digits.cpp  train_digits.h  unix_main.cpp  win32_main.cpp
src/licPlateRec/: AppForm.cpp  AppForm.h  CMakeLists.txt  LprOCR.cpp  LprOCR.h  MainForm.h  feature.h  imgui_impl_glfw.cpp  unix_main.cpp  unix_main.h
src/licPlateRec/minizip/: ioapi.c
